--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
 * {
   box-sizing: border-box;
 }
+img {
+  width: 100%;
+}
 body {
   width: 100%;
   background-image: url('images/bg.jpg');
   background-size: auto;
+  background-repeat: no-repeat;
   font-size: 16px;
 }
 nav div.col {
@@ -47,11 +51,9 @@ nav div.col {
 h1 {
 font-size: 24px;
 }
-/* div {
-  background-color: #A63634;
-height: 25px;
-color: white;
-font-size: 16px;
-text-align: center;
-border: 1pt solid white;
-} */
+
+.skateboards{
+  transform-origin: center;
+  transform: rotate(90deg);
+
+}
