--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,14 @@
 img {
   width: 100%;
 }
+
 body {
   width: 100%;
   background-image: url('images/bg.jpg');
   background-size: auto;
   font-size: 16px;
 }
+
 nav div.col {
   margin: 5px;
   margin-top: 0;
@@ -36,9 +38,7 @@ width: 50px;
   background-position: 0px -120px;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 280px;
-  width: 67.2%;
-  margin: 0 auto;
+  width: 100%;
   border: 6pt solid white;
 }
 .top-image-container {
@@ -63,61 +63,64 @@ width: 50px;
 h1 {
 font-size: 24px;
 }
-.lance-mountain{
-background-image: url('images/sk8er-4.png');
-height: 250px;
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover;
-border: 4pt solid white;
-color: white;
-text-align: center;
+
+.lance-img {
+  height: 250px;
+  border: solid 4px white;
+  background-image: url('images/sk8er-4.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.rodney-mullan-img {
-background-image: url('images/sk8er-3.png');
-height: 250px;
-background-repeat: no-repeat;
-background-position: 20% 0%;
-background-size: cover;
-border: 4pt solid white;
-color: white;
-text-align: center;
+ .rodney-img {
+   height: 250px;
+   border: solid 4px white;
+   background-image: url('images/sk8er-3.png');
+   background-repeat: no-repeat;
+   background-size: cover;
+ }
+ .tommy-img {
+  height: 500px;
+  border: solid 4px white;
+  background-image: url('images/sk8er-2.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.steve-caballero {
+
+.steve-img {
+height: 250px;
 background-image: url('images/sk8er-1.png');
-height: 250px;
 background-repeat: no-repeat;
-background-position: center;
 background-size: cover;
-border: 4pt solid white;
-margin-top:5px;
-margin-bottom: 20px;
-color: white;
-text-align: center;
 }
-.skateboards{
-  height: 280px;
-  width: 67.8%;
-  margin: 0 auto;
-  border: 6pt solid white;
-  background-image: url();
-  margin-bottom: 20px;
+.skateboards {
+  height: 300px;
+  background-color: white;
+  float: left;
 }
 .contact-box {
-height: 200px;
+height: 250px;
 background-color: white;
 position: absolute;
 left: 16%;
 padding: 10px;
-width: 70%;
+width: 50%;
+}
+.contact-box {
+  width: 67.9%;
+}
+form {
+  position: absolute;
+  left: 70%;
+  bottom: 0%;
 }
 .contact-box article {
-  width: 50%;
+  width: 33%;
   display: inline-block;
 }
 .contact-box aside {
-  width: 30%;
+  width: 15%;
   display: inline-block;
+  text-align: center;
 }
 h2 {
   font-size: 24px;
@@ -125,4 +128,7 @@ h2 {
 }
 .contact-box p {
   line-height: 20pt;
+}
+input {
+  margin-bottom: 10px;
 }
