--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
 }
 .icons-social {
 text-align: right;
+right: 30px;
 }
 
 
@@ -78,6 +79,10 @@ header i {
   left: 25px;
   /* transform: translateY(-50%); */
 }
+#news .col-md{
+  padding: 20px;
+
+}
 .skate-article .col-md {
   color: black;
   background-color: white;
@@ -105,33 +110,22 @@ time {
 h1 {
 font-size: 24px;
 }
-
-.lance-img {
-  height: 200px;
-  border: solid 6px white;
-  overflow: hidden;
-
-}
- .rodney-img {
-   height: 200px;
-   border: solid 6px white;
-   overflow: hidden;
-
- }
- .tommy-img {
-  height: 420px;
-  border: solid 6px white;
-  padding: 0;
-  overflow: hidden;
-  padding-left: 0;
-}
-
 .steve-img {
-height: 200px;
-border: solid 6px white;
-margin-top: 10px;
-overflow: hidden;
-padding: 0;
+height: 256px;
+margin-bottom: 20px;
+}
+.rodney-img {
+  margin-bottom: 20px;
+}
+.lance-img {
+  margin-bottom: 20px;
+}
+.tommy-img {
+  margin-bottom: 20px;
+}
+.skateboarders img {
+  border: 4pt solid white;
+  height: 100%;
 }
 .skateboarders {
   margin-bottom: 10px;
@@ -141,18 +135,18 @@ padding: 0;
 
 }
 
-.skateboards {
+.skateboards .col-md {
   height: 300px;
   background-color: white;
 }
 .skateboards img {
-  /* position: absolute; */
+  position: absolute;
   transform: rotate(90deg);
-  top: 120px;
-  right: 370px;
-  height: 65px;
-  width: 250px;
-  text-align: center;
+  height: 100px;
+  width: 300px;
+  z-index: 1;
+  bottom: 100px;
+  left: -95px;
 }
 
 .contact-box {
