--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 }
 .icons-social {
 text-align: right;
-right: 30px;
+right: 20px;
 }
 
 
@@ -28,16 +28,22 @@ right: 30px;
   margin-top: 10px;
 }
 .icons-social i:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 15px;
 }
-.subscribe i {
-  color: white;
-  font-size: 6px;
-  margin-left: 10px;
+#navigation {
+  width: 99.5%;
 }
-.subscribe {
-  margin-top: 20px;
+
+.subscribe a {
   color: white;
+  top: 40%;
+  right: 50px;
+  position: absolute;
+  font-style: none;
+  color: white;
+}
+.subscribe a:hover {
+  text-decoration: none;
 }
 
 
@@ -209,7 +215,7 @@ margin-bottom: 20px;
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
 #sk8 {
   transform: inherit;
